SmartHire_App/force-app/main/default/objects/Job_Application__c/fields/Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date__c</fullName>
    <description>Date when CV analysis was performed</description>
    <inlineHelpText>Date when CV analysis was performed</inlineHelpText>
    <label>Analysis Date</label>
    <type>DateTime</type>
</CustomField>