SmartHire_App/force-app/main/default/objects/Job_Application__c/fields/Analysis_Results__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Results__c</fullName>
    <description>JSON results from CV analysis</description>
    <inlineHelpText>JSON results from CV analysis</inlineHelpText>
    <label>Analysis Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>