SmartHire_App/force-app/main/default/objects/Job_Application__c/fields/Analysis_Score__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Score__c</fullName>
    <description>Score from CV analysis showing match percentage with job requirements</description>
    <inlineHelpText>Score from CV analysis showing match percentage with job requirements</inlineHelpText>
    <label>Analysis Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>