SmartHire_App/force-app/main/default/objects/Job_Application__c/fields/Assigned_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Reviewer</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>