SmartHire_App/force-app/main/default/objects/Job_Application__c/fields/Evaluation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Notes__c</fullName>
    <label>Evaluation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 