SmartHire_App/force-app/main/default/objects/Job_Application__c/fields/Skills_Identified__c.field-meta.xml
<CustomField>
    <fullName>Skills_Identified__c</fullName>
    <description>Skills identified in the CV</description>
    <inlineHelpText>Skills identified in the CV</inlineHelpText>
    <label>Skills Identified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>